--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
@@ -1,132 +1,135 @@
 <section id="barraNav">
-<nav class="navbar navbar-expand-lg shadow BackgroundAzul"
-  [ngClass]="{ 'selected-item-pressed': selectedItem === 'home' && selectedItemsPressed }">
-    <div class="container-fluid py-2">
-        <a class="navbar-brand TextWhite letra1 imagen" href="#" routerLink="cliente/inicioCliente"
-            routerLinkActive="selected-item {{selectedItemPressedClass}}"
-            [ngClass]="{ 'selected-item': selectedItem === 'home','selected-item-pressed': selectedItemsPressed }"
-            (click)="isNavbarCollapsed = true; selectedItem = 'home'; selectedItemsPressed = true;"
-            (click)="activarSelectedItem()"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
-            (click)="isNavbarCollapsed = !isNavbarCollapsed">
-            <span class="navbar-toggler-icon ICONO1"
-                [ngClass]="{ 'selected-item-pressed': selectedItem === 'home' && selectedItemsPressed }"></span>
-        </button>
-        <div class="collapse navbar-collapse fLight " [ngClass]="{ 'show': !isNavbarCollapsed }" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <nav class="navbar navbar-expand-lg  BackgroundAzul"
+        [ngClass]="{ 'selected-item-pressed': selectedItem === 'home' && selectedItemsPressed }">
+        <div class="container-fluid py-2">
+            <a class="navbar-brand TextWhite letra1 imagen" href="#" routerLink="cliente/inicioCliente"
+                routerLinkActive="selected-item {{selectedItemPressedClass}}"
+                [ngClass]="{ 'selected-item': selectedItem === 'home','selected-item-pressed': selectedItemsPressed }"
+                (click)="isNavbarCollapsed = true; selectedItem = 'home'; selectedItemsPressed = true;"
+                (click)="activarSelectedItem()"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
+                (click)="isNavbarCollapsed = !isNavbarCollapsed">
+                <span class="navbar-toggler-icon ICONO1"
+                    [ngClass]="{ 'selected-item-pressed': selectedItem === 'home' && selectedItemsPressed }"></span>
+            </button>
+            <div class="collapse navbar-collapse fLight " [ngClass]="{ 'show': !isNavbarCollapsed }" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                <!--Vista general-->
-                <li class="nav-item">
-                    <a class="nav-link active letra" href="#" routerLink="cliente/inicioCliente"
-                        routerLinkActive="selected-item {{selectedItemPressedClass}}"
-                        [ngClass]="{ 'selected-item': selectedItem === 'home','selected-item-pressed': selectedItemsPressed }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'home'; selectedItemsPressed = true;"
-                        (click)="activarSelectedItem()">INICIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active letra" href="#" routerLink="/cliente/catalogoCliente"
-                        [ngClass]="{ 'selected-item': selectedItem === 'catalogo' }"
-                        (click)="isNavbarCollapsed = true ; selectedItem = 'catalogo'; deselectedItemPressed();">CATÁLOGO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active letra" href="#" routerLink="/cliente/contacto"
-                        [ngClass]="{ 'selected-item': selectedItem === 'contacto' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'contacto'; deselectedItemPressed();">CONTACTO</a>
-                </li>
+                    <!--Vista general-->
+                    <li class="nav-item">
+                        <a class="nav-link active letra" href="#" routerLink="cliente/inicioCliente"
+                            routerLinkActive="selected-item {{selectedItemPressedClass}}"
+                            [ngClass]="{ 'selected-item': selectedItem === 'home','selected-item-pressed': selectedItemsPressed }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'home'; selectedItemsPressed = true;"
+                            (click)="activarSelectedItem()">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active letra" href="#" routerLink="/cliente/catalogoCliente"
+                            [ngClass]="{ 'selected-item': selectedItem === 'catalogo' }"
+                            (click)="isNavbarCollapsed = true ; selectedItem = 'catalogo'; deselectedItemPressed();">CATÁLOGO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active letra" href="#" routerLink="/cliente/contacto"
+                            [ngClass]="{ 'selected-item': selectedItem === 'contacto' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'contacto'; deselectedItemPressed();">CONTACTO</a>
+                    </li>
 
-                <!-- Administrador -->
+                    <!-- Administrador -->
 
-                <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/inicioAdmin"
-                        [ngClass]="{ 'selected-item': selectedItem === 'inicioAdmin' }"
-                        (click)="isNavbarCollapsed = true ; selectedItem = 'inicioAdmin';deselectedItemPressed();">
-                        ADMINISTRADOR</a>
-                </li>
-                <li class="nav-item dropdown" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link dropdown-toggle letra" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'ordenProd' }">
-                        PRODUCCIÓN
-                    </a>
-                    <ul class="dropdown-menu BackgroundAzul fondoDw">
-                        <li><a class="dropdown-item letraD fondoDw" href="#" routerLink="/admin/listadoOrdenProduccion"
-                                (click)="isNavbarCollapsed = true ; selectedItem = 'ordenProd';deselectedItemPressed();">ORDENES
-                                DE
-                                PRODUCCIÓN</a></li>
-                        <li><a class="dropdown-item letraD fondoDw" href="#" routerLink="/admin/listadoFormula"
-                                (click)="isNavbarCollapsed = true; selectedItem = 'ordenProd';deselectedItemPressed();">FÓRMULAS</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link dropdown-toggle letra" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'stock' }">
-                        STOCK
-                    </a>
-                    <ul class="dropdown-menu BackgroundAzul fondoDw">
-                        <li><a class="dropdown-item letraD fondoDw" href="#" routerLink="/admin/listadoStockProducto"
-                                (click)="isNavbarCollapsed = true ; selectedItem = 'stock';deselectedItemPressed();">PRODUCTOS</a>
-                        </li>
-                        <li><a class="dropdown-item letraD fondoDw" href="#"
-                                routerLink="/admin/listadoStockMateriaPrima"
-                                (click)="isNavbarCollapsed = true; selectedItem = 'stock';deselectedItemPressed();">MATERIAS
-                                PRIMAS</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/listadoCatalogo"
-                        [ngClass]="{ 'selected-item': selectedItem === 'catalogoA' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'catalogoA';deselectedItemPressed();">CATÁLOGO</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/listadoProducto"
-                        [ngClass]="{ 'selected-item': selectedItem === 'prod' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'prod';deselectedItemPressed();">PRODUCTOS</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/listadoMateriaPrima"
-                        [ngClass]="{ 'selected-item': selectedItem === 'matPr' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'matPr';deselectedItemPressed();">MATERIAS
-                        PRIMAS</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/listadoProveedor"
-                        [ngClass]="{ 'selected-item': selectedItem === 'prov' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'prov';deselectedItemPressed();">PROVEEDORES</a>
-                </li>
-                <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
-                    <a class="nav-link active letra" href="#" routerLink="/admin/listadoCliente"
-                        [ngClass]="{ 'selected-item': selectedItem === 'clientes' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'clientes';deselectedItemPressed();">CLIENTES</a>
-                </li>
-            </ul>
+                    <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link active letra" href="#" routerLink="/admin/inicioAdmin"
+                            [ngClass]="{ 'selected-item': selectedItem === 'inicioAdmin' }"
+                            (click)="isNavbarCollapsed = true ; selectedItem = 'inicioAdmin';deselectedItemPressed();">
+                            ADMINISTRADOR</a>
+                    </li>
+                    <li class="nav-item dropdown" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link dropdown-toggle letra" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'ordenProd' }">
+                            PRODUCCIÓN
+                        </a>
+                        <ul class="dropdown-menu BackgroundAzul fondoDw">
+                            <li><a class="dropdown-item letraD fondoDw" href="#"
+                                    routerLink="/admin/listadoOrdenProduccion"
+                                    (click)="isNavbarCollapsed = true ; selectedItem = 'ordenProd';deselectedItemPressed();">ORDENES
+                                    DE
+                                    PRODUCCIÓN</a></li>
+                            <li><a class="dropdown-item letraD fondoDw" href="#" routerLink="/admin/listadoFormula"
+                                    (click)="isNavbarCollapsed = true; selectedItem = 'ordenProd';deselectedItemPressed();">FÓRMULAS</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link dropdown-toggle letra" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'stock' }">
+                            STOCK
+                        </a>
+                        <ul class="dropdown-menu BackgroundAzul fondoDw">
+                            <li><a class="dropdown-item letraD fondoDw" href="#"
+                                    routerLink="/admin/listadoStockProducto"
+                                    (click)="isNavbarCollapsed = true ; selectedItem = 'stock';deselectedItemPressed();">PRODUCTOS</a>
+                            </li>
+                            <li><a class="dropdown-item letraD fondoDw" href="#"
+                                    routerLink="/admin/listadoStockMateriaPrima"
+                                    (click)="isNavbarCollapsed = true; selectedItem = 'stock';deselectedItemPressed();">MATERIAS
+                                    PRIMAS</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link active letra" href="#" routerLink="/admin/listadoCatalogo"
+                            [ngClass]="{ 'selected-item': selectedItem === 'catalogoA' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'catalogoA';deselectedItemPressed();">CATÁLOGO</a>
+                    </li>
+                    <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link active letra" href="#" routerLink="/admin/listadoProducto"
+                            [ngClass]="{ 'selected-item': selectedItem === 'prod' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'prod';deselectedItemPressed();">PRODUCTOS</a>
+                    </li>
+                    <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link active letra" href="#" routerLink="/admin/listadoMateriaPrima"
+                            [ngClass]="{ 'selected-item': selectedItem === 'matPr' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'matPr';deselectedItemPressed();">MATERIAS
+                            PRIMAS</a>
+                    </li>
+                    <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link active letra" href="#" routerLink="/admin/listadoProveedor"
+                            [ngClass]="{ 'selected-item': selectedItem === 'prov' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'prov';deselectedItemPressed();">PROVEEDORES</a>
+                    </li>
+                    <li class="nav-item" *ngIf="this.userHasRole(['Adm'])">
+                        <a class="nav-link active letra" href="#" routerLink="/admin/listadoCliente"
+                            [ngClass]="{ 'selected-item': selectedItem === 'clientes' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'clientes';deselectedItemPressed();">CLIENTES</a>
+                    </li>
+                </ul>
 
-            <ul class="navbar-nav mb-2 mb-lg-0 me-5 dropdown-menu-start" *ngIf="!this.userHasRole(['Adm'])">
-                <li class="nav-item dropdown fuente fixed-end">
-                    <a class="nav-link  active" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'p' }"
-                        (click)="isNavbarCollapsed = true; selectedItem = 'p';deselectedItemPressed();">
-                        <i class="fa-solid fa-user icono" [ngClass]="{ 'selected-item': selectedItem === 'p' }"
-                            routerLink="/seguridad/login"></i>
-                    </a>
-                </li>
-            </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0 me-5 dropdown-menu-start" *ngIf="!this.userHasRole(['Adm'])">
+                    <li class="nav-item dropdown fuente fixed-end">
+                        <a class="nav-link  active" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'p' }"
+                            (click)="isNavbarCollapsed = true; selectedItem = 'p';deselectedItemPressed();">
+                            <i class="fa-solid fa-user icono" [ngClass]="{ 'selected-item': selectedItem === 'p' }"
+                                routerLink="/seguridad/login"></i>
+                        </a>
+                    </li>
+                </ul>
 
-            <ul class="navbar-nav mb-2 mb-lg-0 me-5 dropdown-menu-start" *ngIf="this.userHasRole(['Adm'])">
-                <li class="nav-item dropdown fuente fixed-end">
-                    <a class="nav-link  active ICONO2" href="" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <i class="fa-solid fa-user icono"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end  BackgroundAzul" data-bs-popper="static">
-                        <li><a class="nav-link active  BackgroundAzul ms-3" aria-current="page" routerLink=""
-                                (click)="logout()" (click)="isNavbarCollapsed = true"><span class="rojo">Logout
-                                </span><i class="fa-solid fa-arrow-right-from-bracket rojo"></i></a></li>
-                    </ul>
-                </li>
-            </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0 me-5 dropdown-menu-start" *ngIf="this.userHasRole(['Adm'])">
+                    <li class="nav-item dropdown fuente fixed-end">
+                        <a class="nav-link  active ICONO2" href="" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user icono"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end  BackgroundAzul" data-bs-popper="static">
+                            <li><a class="nav-link active  BackgroundAzul ms-3" aria-current="page" routerLink=""
+                                    (click)="logout()" (click)="isNavbarCollapsed = true"><span class="TextCeleste">Logout
+                                    </span><i class="fa-solid fa-arrow-right-from-bracket TextCeleste"
+                                        [ngClass]="{ 'selected-item': selectedItem === 'p'}"></i></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 </section>
