--- a/src/app/Paginas/LadoAdmin/inicio-administrador/inicio-administrador.component.html
+++ b/src/app/Paginas/LadoAdmin/inicio-administrador/inicio-administrador.component.html
@@ -5,7 +5,7 @@
 </div>
 
 
-<section id="barra">
+<section id="barra" class="shadow mt-4 BackgroundAzulCard">
     <ul class="nav justify-content-md-center justify-content-sm-start py-3">
         <li class="nav-item">
             <a class="nav-link TextYellow" (click)="onClickNavLink('mpStockMinimo')">Materias primas sin stock</a>
