--- a/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-precio/agregar-precio.component.html
+++ b/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-precio/agregar-precio.component.html
@@ -1,80 +1,17 @@
-<div class="container TextWhite mtt ff shadow-lg rounded-2">
-    <form #f="ngForm" (ngSubmit)="registrar(f)" class="container">
-        <h3 class="text-start py-3">NUEVO PRECIO</h3>
-        <hr />
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-                <div class="form-group">
-                    <label for="precio">PRECIO</label>
-                    <input type="text" class="form-control" [(ngModel)]="pprecio.precio" #precio="ngModel" name="precio"
-                        required pattern="[0-9]*" placeholder="Introduzca el precio" />
-                    <div *ngIf="precio.invalid && (precio.dirty || precio.touched)">
-                        <small class="text-danger">Por favor ingrese un precio válida</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-                <div class="form-group">
-                    <label for="fechaVigenciaDesde">FECHA VIGENCIA DESDE</label>
-                    <input type="date" class="form-control" name="fechaVigenciaDesde"
-                        [(ngModel)]="pprecio.fechaVigenciaDesde" #fechaVigenciaDesde="ngModel" required />
-                    <div *ngIf="fechaVigenciaDesde.invalid && (fechaVigenciaDesde.dirty || fechaVigenciaDesde.touched)">
-                        <small class="text-danger">Por favor ingrese una fecha valida</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-                <div class="form-group">
-                    <label for="fehcaVigenciaHasta">FECHA VIGENCIA HASTA</label>
-                    <input type="date" class="form-control" name="fehcaVigenciaHasta"
-                        [(ngModel)]="pprecio.fehcaVigenciaHasta" #fehcaVigenciaHasta="ngModel" required />
-                    <div *ngIf="fehcaVigenciaHasta.invalid && (fehcaVigenciaHasta.dirty || fehcaVigenciaHasta.touched)">
-                        <small class="text-danger">Por favor ingrese una fecha valida</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row py-4">
-            <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
-                <div class="">
-                    <button class="btn btn-success" type="submit" id="" matTooltip="Agregar precio">AGREGAR</button>
-                </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
-                <div class="">
-                    <button class="btn btn-danger" (click)="Limpiar(this.f)" matTooltip="Cancelar">CANCELAR</button>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
-            </div>
-        </div>
-    </form>
+<div class="floating-object" *ngIf="isNavVisible">
+    <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+        <i class="fa-solid fa-circle-chevron-up"></i>
+    </a>
 </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#1b345d" fill-opacity="1"
-        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,224C840,245,960,235,1080,202.7C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
-    </path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#1b345d" fill-opacity="1"
-        d="M0,192L60,176C120,160,240,128,360,117.3C480,107,600,117,720,138.7C840,160,960,192,1080,218.7C1200,245,1320,267,1380,277.3L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
-    </path>
-</svg>
 
 <div class="container TextWhite rounded-2 ff mtt mb-5">
     <div class="row">
-        <div class="col-6 col-sm-6 col-md-5 col-lg-4">
+        <div class="col-4 col-sm-4 col-md-3 col-lg-2">
             <h3 class="text-start py-3 mt-1">PRECIOS</h3>
         </div>
-        <div class="col-6 col-sm-6 col-md-7 col-lg-8 text-start py-3">
+        <div class="col-8 col-sm-8 col-md-9 col-lg-10 text-start py-3">
+            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nuevo precio">NUEVO</button>
         </div>
     </div>
     <hr />
@@ -108,3 +45,85 @@
         </table>
     </div>
 </div>
+
+
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,224C840,245,960,235,1080,202.7C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,192L60,176C120,160,240,128,360,117.3C480,107,600,117,720,138.7C840,160,960,192,1080,218.7C1200,245,1320,267,1380,277.3L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+    </path>
+</svg>
+
+<section id="nuevo">
+    <div class="container TextWhite mtt ff shadow-lg rounded-2">
+        <form #f="ngForm" (ngSubmit)="registrar(f)" class="container">
+            <h3 class="text-start py-3">NUEVO PRECIO</h3>
+            <hr />
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
+                    <div class="form-group">
+                        <label for="precio">PRECIO</label>
+                        <input type="text" class="form-control" [(ngModel)]="pprecio.precio" #precio="ngModel"
+                            name="precio" required pattern="[0-9]*" placeholder="Introduzca el precio" />
+                        <div *ngIf="precio.invalid && (precio.dirty || precio.touched)">
+                            <small class="text-danger">Por favor ingrese un precio válida</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
+                    <div class="form-group">
+                        <label for="fechaVigenciaDesde">FECHA VIGENCIA DESDE</label>
+                        <input type="date" class="form-control" name="fechaVigenciaDesde"
+                            [(ngModel)]="pprecio.fechaVigenciaDesde" #fechaVigenciaDesde="ngModel" required />
+                        <div
+                            *ngIf="fechaVigenciaDesde.invalid && (fechaVigenciaDesde.dirty || fechaVigenciaDesde.touched)">
+                            <small class="text-danger">Por favor ingrese una fecha valida</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
+                    <div class="form-group">
+                        <label for="fehcaVigenciaHasta">FECHA VIGENCIA HASTA</label>
+                        <input type="date" class="form-control" name="fehcaVigenciaHasta"
+                            [(ngModel)]="pprecio.fehcaVigenciaHasta" #fehcaVigenciaHasta="ngModel" required />
+                        <div
+                            *ngIf="fehcaVigenciaHasta.invalid && (fehcaVigenciaHasta.dirty || fehcaVigenciaHasta.touched)">
+                            <small class="text-danger">Por favor ingrese una fecha valida</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row py-4">
+                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
+                    <div class="">
+                        <button class="btn btn-success" type="submit" id="" matTooltip="Agregar precio">AGREGAR</button>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
+                    <div class="">
+                        <button class="btn btn-danger" (click)="Limpiar(this.f)" matTooltip="Cancelar">CANCELAR</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6 text-center mt-3">
+                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,224C840,245,960,235,1080,202.7C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+</svg>
