--- a/src/app/Paginas/LadoAdmin/StockProducto/listado-stock-producto/listado-stock-producto.component.html
+++ b/src/app/Paginas/LadoAdmin/StockProducto/listado-stock-producto/listado-stock-producto.component.html
@@ -72,7 +72,7 @@
                             <tr>
                                 <th scope="col">NOMBRE</th>
                                 <th scope="col">CANTIDAD</th>
-                                <th scope="col">F. ÚLTIMA ACTUALIZACIÓN</th>
+                                <th scope="col">FECHA ÚLT. ACTUALIZACIÓN</th>
                                 <th scope="col">TIPO DE MOVIMIENTO</th>
                             </tr>
                         </thead>
