--- a/src/app/Paginas/LadoCliente/Soporte/ayuda/ayuda.component.html
+++ b/src/app/Paginas/LadoCliente/Soporte/ayuda/ayuda.component.html
@@ -26,6 +26,16 @@
         </div>
     </div>
     <div class="row mt-5 text-start">
+        <div class="col-12 col-sm-12 col-md-9 col-lg-9">
+            <p class="bold">
+                ¿Como hago un reclamo sobre mi producto?
+            </p>
+            <small>
+                Para poder realizar un reclamo sobre el producto, podes hacerlo a través de nuestro mail,  bochasfranca@yahoo.com.ar o podes escribirnos a WhatsApp +54 3572-435838
+            </small>
+        </div>
+    </div>
+    <div class="row mt-5 text-start">
         <div class="col-12 col-sm-12 col-md-8 col-lg-8">
             <p class="bold">
                 ¿Tienes alguna duda o quieres comunicarte con nosotros?
