--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
@@ -96,8 +96,8 @@
 
 <div class="container py-3 TextWhite">
     <div class="row">
-        <div class="d-none d-lg-block  col-md-12 col-lg-6 col-xl-6 mt-5 py-3">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680559070/FrancaSW/avenue-815297__480_f12sck.jpg"
+        <div class="d-none d-lg-block  col-md-12 col-lg-6 col-xl-6 mt-5 py-2">
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1686789115/FrancaSW/curva_izquierda_abajooo_h2d70c.png"
                 alt="descripcion-de-la-imagen" class="img-fluid">
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
